add improved lakes and rivers